@@ -1,3 +1,5 @@
+CR-2003-05-09-0  Testsuite: finalized scheduler performance test
+
 JG-2003-05-09-0  Bugfix:    Broken build
 
 AH-2003-05-08-0  Enhancem.: Use commd commproc timeout as maximum for event delivery time. 
